# antenna_extraction

./: .gitignore  main.py  pyproject.toml
benchmarks/v1/: README.md  benchmark_manifest.example.json  benchmark_manifest.json
config/: models.example.yaml  pipeline.example.yaml
docs/: architecture.md  claim_schema.md  evidence_schema.md  model_assignment.md  testing_strategy.md
scripts/: freeze_benchmark.py  probe_canonicalizer_capabilities.py
src/antenna_ingest/: cli.py
src/antenna_ingest/canonicalization/: __init__.py  agent.py  canonicalize.py  doctor.py  prompt.py  schemas.py  tool_call_probe.py  tools.py  validation.py
src/antenna_ingest/evidence/: __init__.py  (+3 more)
tests/: test_canonicalization_agent.py  test_canonicalization_pipeline.py  test_canonicalization_schemas.py  test_canonicalization_tools.py  test_canonicalization_validation.py  test_docling_evidence_builder.py  test_docling_table_extractor.py  test_docling_text_parser_helpers.py  test_evidence_blocks.py  test_evidence_schemas.py  test_evidence_tables.py  test_layout_schemas.py  test_nuextract_candidate_schemas.py  test_nuextract_raw_extraction.py  test_nuextract_template_alignment.py  test_parse_report_counts.py  test_parse_report_schema.py  test_retrieval_index.py  test_retrieval_search.py  test_validated_canonicalization.py
tests/integration/: test_create_run.py  test_nuextract_markdown_conversion.py  test_nuextract_render_pages.py  test_phase2a_parse_docling.py  test_phase2b_tables_in_parse_docling.py
tests/unit/: test_canonicalization_doctor.py  test_cli.py  test_cli_canonicalization.py  test_cli_retrieval.py  test_failures.py  test_freeze_benchmark.py  test_json_io.py  test_markdown_conversion.py  test_nuextract_client.py  test_nuextract_doctor.py  test_nuextract_settings.py  test_pdf_rendering.py  test_run_schemas.py
(+26 files in other folders)
