[project]
name = "antenna-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.97.0",
    "httpx",
    "numpy",
    "orjson",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "rank-bm25",
    "rich",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antenna_ingest"]
