[project]
name = "antenna-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.1",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antenna_ingest"]

[tool.pytest.ini_options]
norecursedirs = ["legacy"]
